--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ idna==3.11
 microdot==2.4.0
 pydantic==2.12.5
 pydantic_core==2.41.5
+python-dotenv==1.2.1
 requests==2.32.5
 tinydb==4.8.2
 typing-inspection==0.4.2
