fix: interfaces not mapped correctly
note - in docker interfaces wont work correctly without network_mode:
host

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,7 @@ services:
     container_name: home-dashboard
     restart: unless-stopped
     pid: host
-    ports:
-      - "18745:18745"
+    network_mode: host
     environment:
       - PORT=18745
       - DEBUG=${DEBUG:-false}
