--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,11 @@
 
 # production
 /build
-db.json
+data/db.json
 
 # misc
 .DS_Store
+.env
 .envrc
 .env.local
 .env.development.local
@@ -25,3 +26,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 __pycache__/
+*.pyc
