--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=development webpack serve",
-    "build": "rm -rf build && NODE_ENV=production webpack",
+    "build": "rm -rf public && NODE_ENV=production webpack",
     "pack": "cd dist && zip -r bundle.zip *",
-    "deploy": "npm run build && npm run pack && node deploy.mjs"
+    "deploy": "npm run public && npm run pack && node deploy.mjs"
   },
   "author": "Dominik Zeglen",
   "license": "MIT",
