--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,22 @@
 annotated-types==0.7.0
-anyio==4.12.0
-certifi==2025.11.12
+black==25.12.0
+certifi==2026.1.4
 charset-normalizer==3.4.4
+click==8.3.1
 dbus-fast==3.1.2
+dotenv==0.9.9
 idna==3.11
-microdot==2.4.0
+microdot==2.5.1
+mypy_extensions==1.1.0
+packaging==25.0
+pathspec==1.0.3
+platformdirs==4.5.1
 pydantic==2.12.5
 pydantic_core==2.41.5
 python-dotenv==1.2.1
+pytokens==0.3.0
 requests==2.32.5
 tinydb==4.8.2
 typing-inspection==0.4.2
 typing_extensions==4.15.0
-urllib3==2.6.2
+urllib3==2.6.3
