--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,24 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.3
+aiosignal==1.4.0
 annotated-types==0.7.0
+async-lru==2.0.5
+attrs==25.4.0
 black==25.12.0
 certifi==2026.1.4
 charset-normalizer==3.4.4
 click==8.3.1
 dbus-fast==3.1.2
 dotenv==0.9.9
+frozenlist==1.8.0
 idna==3.11
 microdot==2.5.1
+multidict==6.7.0
 mypy_extensions==1.1.0
 packaging==25.0
 pathspec==1.0.3
 platformdirs==4.5.1
+propcache==0.4.1
 pydantic==2.12.5
 pydantic_core==2.41.5
 python-dotenv==1.2.1
@@ -20,3 +28,4 @@ tinydb==4.8.2
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.6.3
+yarl==1.22.0
